--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,7 +18,7 @@
           <h1>MDVita</h1>
         </div>
         <div class="profile-container">
-          <img id="profile-pic" src="/static/images/default-avatar.png" alt="Profile" class="profile-pic" onclick="goToProfile()">
+          <img id="profile-pic" src="/static/images/avatar.png" alt="Profile" class="profile-pic" onclick="goToProfile()">
           <span id="user-name-top">Loading...</span>
         </div>
       </div>
