--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,7 @@
       <div class="profile-header">
         <h1>My Profile</h1>
         <div class="top-profile">
-          <img id="profile-pic" src="/static/images/default-avatar.png" alt="Profile Picture">
+          <img id="profile-pic" src="/static/images/avatar.png" alt="Profile Picture">
           <input type="file" id="upload-pic" accept="image/*" title="Change Picture">
         </div>
       </div>
